<?xml version="1.0" encoding="utf-8"?>




<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.srajan.edumantra.LoginActivity">
    <!--#59c4be-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/passw"
                android:maxLines="1"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="8dp"
                android:hint="@string/password"
               android:textColorHint="#ffffff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uname"
                android:drawableLeft="@drawable/ic_lockedc"
                android:drawablePadding="5dp"/>


            <Button
                android:id="@+id/btnsign"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:background="#75aad1"
                android:text="Sign In"
                android:textColor="#ffffff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passw" />

            <Button
                android:id="@+id/btnskip"
                android:layout_width="107dp"
                android:layout_height="39dp"
                android:layout_marginBottom="262dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="Skip"
                android:background="#75aad1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/uname"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="118dp"
                android:maxLines="1"
                android:hint="@string/user"
                android:drawablePadding="5dp"
                app:layout_constraintHorizontal_bias="0.714"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableLeft="@drawable/ic_userc"
                android:textColorHint="#ffffff"
                />

            <!--<Button-->
            <!--android:layout_width="130dp"-->
            <!--android:layout_height="40dp"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--android:text="@string/forget"-->
            <!--android:textSize="13sp"-->
            <!--android:id="@+id/button"-->

            <!--android:layout_marginLeft="28dp"-->
            <!--android:background="#50b0ab"-->
            <!--android:layout_marginBottom="32dp" />-->


            <TextView
                android:id="@+id/btnup"
                android:layout_width="260dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/register"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/btnsign"
                app:layout_constraintRight_toRightOf="@+id/btnsign"
                app:layout_constraintTop_toBottomOf="@+id/btnsign"
                app:layout_constraintVertical_bias="0.066"
                android:textColor="#ffffff"
                />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>

