<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.srajan.edumantra.CareerPath"
    android:background="#66a1cc"
    android:layout_centerInParent="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--<ImageView-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/shadow"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.632"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:id="@+id/imageView2" />-->
    <!---->
   <!--<ImageView-->
       <!--android:layout_width="101dp"-->
       <!--android:layout_height="250dp"-->
       <!--android:src="@drawable/pathstand"-->
       <!--android:layout_marginRight="8dp"-->
       <!--app:layout_constraintRight_toRightOf="parent"-->
       <!--android:layout_marginLeft="8dp"-->
       <!--app:layout_constraintLeft_toLeftOf="parent"-->
       <!--app:layout_constraintTop_toTopOf="parent"-->
       <!--android:layout_marginTop="8dp"-->
       <!--app:layout_constraintBottom_toBottomOf="@+id/imageView2"-->
       <!--android:layout_marginBottom="8dp" />-->
    <!---->
   <ImageView
       android:layout_width="301dp"
       android:layout_height="364dp"
       android:src="@drawable/directionboard"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="8dp"
       android:id="@+id/imageView3"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginBottom="8dp"
       android:layout_marginLeft="8dp"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginRight="8dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintHorizontal_bias="0.477"
       app:layout_constraintVertical_bias="0.073"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp" />

    <ImageView
        android:layout_width="412dp"
        android:layout_height="157dp"
        android:src="@drawable/road"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginEnd="8dp"
        android:id="@+id/imageView4"
        />

    <TextView
        android:layout_width="72dp"
        android:layout_height="wrap_content"
       android:text="@string/science"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="161dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.038"
        android:id="@+id/txtsci"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView4" />
    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/art"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintVertical_bias="0.151"
        android:id="@+id/txtarts"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/commerce"
        android:textSize="15sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.775"
        android:id="@+id/txtcomm"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.271"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/design"
        android:textSize="15sp"
        android:id="@+id/txtdesign"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.372"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintVertical_bias="0.593"
        android:id="@+id/txtother"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/competative"
        android:textSize="15sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintVertical_bias="0.487"
        android:id="@+id/txtcomp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Defence"
        app:layout_constraintTop_toBottomOf="@+id/txtcomp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintLeft_toRightOf="@+id/txtother"
        android:textSize="15sp"
        app:layout_constraintRight_toRightOf="@+id/txtcomp"
        app:layout_constraintVertical_bias="0.345"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.275" />


</android.support.constraint.ConstraintLayout>

    </ScrollView>
    <!--<ImageView-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:id="@+id/imgscience"-->
        <!--android:src="@drawable/science"-->
        <!--android:layout_marginTop="14dp"-->
        <!--android:layout_alignTop="@+id/imgstand"-->
        <!--android:layout_alignLeft="@+id/imgcompetative"-->
        <!--android:layout_alignStart="@+id/imgcompetative" />-->

    <!--<ImageView-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:id="@+id/imgcom"-->
        <!--android:src="@drawable/commerce"-->
        <!--android:layout_marginRight="12dp"-->
        <!--android:layout_marginEnd="12dp"-->
        <!--android:layout_below="@+id/imageView3"-->
        <!--android:layout_alignRight="@+id/imgscience"-->
        <!--android:layout_alignEnd="@+id/imgscience" />-->

    <!--<ImageView-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:src="@drawable/designing"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_below="@+id/imgcom"-->
        <!--android:layout_alignRight="@+id/imgstand"-->
        <!--android:layout_alignEnd="@+id/imgstand" />-->

    <!--<ImageView-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:src="@drawable/others"-->
        <!--android:id="@+id/imageView2"-->
        <!--android:layout_below="@+id/imgcompetative"-->
        <!--android:layout_alignLeft="@+id/imageView"-->
        <!--android:layout_alignStart="@+id/imageView" />-->

    <!--<ImageView-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="42dp"-->
        <!--android:src="@drawable/competetive"-->
        <!--android:id="@+id/imgcompetative"-->
        <!--android:layout_marginTop="27dp"-->
        <!--android:layout_below="@+id/imgcom"-->
        <!--android:layout_toRightOf="@+id/imageView2"-->
        <!--android:layout_toEndOf="@+id/imageView2" />-->

    <!--<ImageView-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:src="@drawable/arts"-->
        <!--android:layout_marginTop="27dp"-->
        <!--android:id="@+id/imageView3"-->
        <!--android:layout_alignTop="@+id/imgscience"-->
        <!--android:layout_toLeftOf="@+id/imgscience"-->
        <!--android:layout_toStartOf="@+id/imgscience" />-->

    <!--<ImageView-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/shadow"-->
        <!--android:layout_below="@+id/imageView2"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="25dp" />-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/road"-->
        <!--android:layout_below="@+id/imageView2"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->


    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="300dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:src="@drawable/path"-->
        <!--android:id="@+id/imgpath"/>-->
    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/road"-->
        <!--android:layout_below="@id/imgpath"/>-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/science"-->
        <!--android:layout_alignTop="@+id/imgpath"-->
        <!--android:layout_alignLeft="@+id/imgpath"-->
        <!--android:layout_alignStart="@+id/imgpath"-->
        <!--android:layout_marginLeft="115dp"-->
        <!--android:layout_marginStart="115dp"-->
        <!--android:layout_marginTop="47dp"-->
        <!--android:id="@+id/textView3" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/art"-->
        <!--android:layout_below="@+id/textView3"-->
        <!--android:layout_toRightOf="@+id/textView3"-->
        <!--android:layout_toEndOf="@+id/textView3"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:id="@+id/textView4" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/commerce"-->
        <!--android:layout_alignTop="@+id/imgpath"-->
        <!--android:layout_toRightOf="@+id/textView3"-->
        <!--android:layout_toEndOf="@+id/textView3"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginStart="15dp"-->
        <!--android:layout_marginTop="18dp"-->
        <!--android:id="@+id/textView6" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/others"-->
        <!--android:layout_below="@+id/textView4"-->
        <!--android:layout_toLeftOf="@+id/textView4"-->
        <!--android:layout_toStartOf="@+id/textView4"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:id="@+id/textView5" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/competative"-->
        <!--android:layout_marginTop="11dp"-->
        <!--android:layout_below="@+id/textView5"-->
        <!--android:layout_alignLeft="@+id/textView6"-->
        <!--android:layout_alignStart="@+id/textView6"-->
        <!--android:id="@+id/textView7" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/design"-->
        <!--android:layout_below="@+id/textView7"-->
        <!--android:layout_alignRight="@+id/textView5"-->
        <!--android:layout_alignEnd="@+id/textView5"-->
        <!--android:layout_marginTop="16dp" />-->

</RelativeLayout>
